<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchItem"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settingsItem"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/sortItem"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/reverseItem"
        android:title="@string/reverse"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_swap_vert_24"/>
</menu>