<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enterLayout"
    tools:context=".EnterNameActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/enter_name"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:nextFocusForward="@id/passwordEditText"
        android:nextFocusDown="@id/passwordEditText"
        android:nextFocusUp="@id/passwordEditText"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_alignStart="@id/nameEditText"
        android:layout_alignEnd="@id/nameEditText"
        android:hint="@string/password"
        android:singleLine="true"
        />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/confirmNameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/nameEditText"
        android:layout_marginBottom="15dp"
        android:layout_alignStart="@id/nameEditText"
        android:layout_alignEnd="@id/nameEditText"
        app:nb_backgroundColor="@android:color/black"
        app:nb_textColor="@android:color/white"
        app:nb_text="@string/log_in"
        app:nb_textSize="20sp"
        app:nb_enabled="false"
        app:nb_radius="8dp"
        />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/registerOrLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:nb_text="@string/register"
        android:layout_above="@id/confirmNameButton"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:layout_alignStart="@id/nameEditText"
        android:layout_alignEnd="@id/nameEditText"
        app:nb_backgroundColor="@android:color/black"
        app:nb_textColor="@android:color/white"
        app:nb_radius="8dp"
        />
    <CheckBox
        android:id="@+id/rememberNameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignStart="@id/passwordEditText"
        android:text="@string/remember_me"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>