<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <com.sayantan.advancedspinner.SingleSpinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/countryTextView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/country"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        />

    <com.sayantan.advancedspinner.SingleSpinner
        android:id="@+id/genreSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/genresTextView"
        android:layout_marginTop="10dp"
        android:layout_below="@id/countrySpinner"
        android:layout_alignStart="@id/countrySpinner"
        />
    <TextView
        android:id="@+id/genresTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/countrySpinner"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:text="@string/genre"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/minYearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genreSpinner"
        android:background="@android:color/white"
        app:nb_radius="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/genreSpinner"
        android:layout_marginBottom="3dp"
        android:layout_alignEnd="@id/countrySpinner"
        app:nb_text="@string/not_selected"
        />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_below="@id/genreSpinner"
        android:layout_alignParentStart="true"
        android:text="@string/min_year"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearTextView"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:nb_radius="10dp"
        app:nb_backgroundColor="@android:color/black"
        app:nb_textColor="@android:color/white"
        app:nb_textSize="15sp"
        app:nb_text="@string/confirm"
        />
</RelativeLayout>